# game_2048

./: .gitignore  CMakeLists.txt  README.md  game_2048-macos  vcpkg.json
src/: game2048.cpp  game2048.hpp  game_view.cpp  game_view.hpp  main.cpp
